[Pmg] Fix overflow

--- a/wegas-app/src/main/webapp/wegas-pmg/css/wegas-pmg.css
+++ b/wegas-app/src/main/webapp/wegas-pmg/css/wegas-pmg.css
@@ -256,7 +256,7 @@ h2{
 
 
 /* ------ Page loader Overflow */
-.wegas-pageloader {
+.body {
     overflow-y: auto;
     overflow-x: hidden;
 }
